syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/devder/grpc-b/pb";

// don't have to use sequential numbers but 1-15 takes 1byte and saves memory
message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}